--- a/Config-Server/config-server/src/main/resources/config/user-service.yml
+++ b/Config-Server/config-server/src/main/resources/config/user-service.yml
@@ -4,6 +4,8 @@ eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 Spring:
   datasource:
     username: root
