--- a/User-Service/user-server/src/main/resources/application.yml
+++ b/User-Service/user-server/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   application:
     name: user-service
   config:
-    import: "optional:configserver:http/localhost:8088"
+    import: "optional:configserver:http://localhost:8088"
